--- a/init.angler.rc
+++ b/init.angler.rc
@@ -1,5 +1,6 @@
 #
 # Copyright 2015 The Android Open Source Project
+# Copyright 2019 The Maru OS Project
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -17,6 +18,7 @@
 import init.angler.usb.rc
 import init.angler.diag.rc
 import init.angler.sensorhub.rc
+import init.maru.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
